tests/baselines/reference/recursivelySpecializedConstructorDeclaration.errors.txt
recursivelySpecializedConstructorDeclaration.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
recursivelySpecializedConstructorDeclaration.ts(1,17): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
recursivelySpecializedConstructorDeclaration.ts(1,26): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
recursivelySpecializedConstructorDeclaration.ts(1,31): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== recursivelySpecializedConstructorDeclaration.ts (4 errors) ====
    module MsPortal.Controls.Base.ItemList {
           ~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                    ~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                             ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                                  ~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
        export interface Interface<TValue> {
            // Removing this line fixes the constructor of ItemValue
            options: ViewModel<TValue>;
        }    
    
        export class ItemValue<T> {
            constructor(value: T) {
            }
        }    
     
        export class ViewModel<TValue> extends ItemValue<TValue> {
        }
    }
    
    // Generates:
    /*
    declare module MsPortal.Controls.Base.ItemList {
        interface Interface<TValue> {
            options: ViewModel<TValue>;
        }
        class ItemValue<T> {
            constructor(value: T);
        }
        class ViewModel<TValue> extends ItemValue<TValue> {
        }
    }
    */